@@ -3,6 +3,7 @@
 = 7.6.0 - xxxx-xx-xx =
 * Fix - PHP fatal error when saving a non-UPE payment method and the Stripe request to retrieve it fails.
 * Fix - Missing mapping for formal German (de_DE_formal), Swiss German (de_CH), and informal Swiss German (de_CH_informal) locales for Stripe emails.
+* Tweak - Skip Apple Pay registration for accounts from India.
 
 = 7.5.0 - 2023-08-10 =
 * Fix - Unable to process 0 amount subscription.
